# katana

./: ._target  .daggerignore  .dockerignore  .env.example  .gitignore  .gitmodules  .katana-quote-response.json  .katana-rpc-url  .spr.yml  .tool-versions  AGENT.legacy.md  AGENT.md  AGENTS.md  AVNU_PAYMASTER_INTEGRATION.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  REFACTORING_DBPROVIDER.md  Scarb.toml  dagger.json  data.js  index.html  katana-tee-setup.sh  katana_logs_4.txt  katana_logs_5.txt  reproducible.Dockerfile  setup.md  sidecar-versions.toml  snfoundry.toml  spec.md  test_fork.sh  test_fork_complete.sh  test_fork_execute_transaction.sh  test_fork_transaction.sh  upload-tee.sh  vm-image.Dockerfile
clients/amd_tee_registry_client/: Cargo.toml  README.md
clients/amd_tee_registry_client/src/: attestation.rs  cairo_fixtures.rs  calldata.rs  error.rs  kds.rs  lib.rs  prover.rs  starknet.rs  types.rs
clients/amd_tee_registry_client/src/testdata/: mod.rs
clients/amd_tee_registry_client/tests/: calldata.rs  commitment.rs  common.rs  config.rs  prover.rs  sp1_mock_proof.rs
clients/katana_tee_client/: Cargo.toml  README.md  example_response.json  proof_output.json
clients/katana_tee_client/examples/: debug_attestation.rs  execute_proof.rs  fetch_attestation.rs  generate_proof.rs
clients/katana_tee_client/src/: error.rs  lib.rs  prover.rs  rpc.rs  starknet.rs
clients/katana_tee_client/tests/: generate_report_data_vectors.rs  lib.rs  prover.rs
crates/cartridge/: Cargo.toml  build.rs
crates/cartridge/src/: client.rs  controller.rs  lib.rs  paymaster.rs  utils.rs  vrf.rs
crates/cartridge/src/middlware/: layer.rs  mod.rs
crates/cartridge/src/paymaster/: layer.rs  mod.rs
crates/cartridge/src/rpc/: api.rs  mod.rs  types.rs
crates/cartridge/src/vrf/: bootstrap.rs  client.rs  mod.rs  sidecar.rs
crates/cartridge/tests/: paymaster.rs  vrf.rs
crates/chain-spec/: Cargo.toml
crates/chain-spec/src/: dev.rs  fee_token.rs  full_node.rs  lib.rs  settlement.rs  settlement_check.rs
crates/chain-spec/tests/: rollup.rs
crates/cli/: Cargo.toml
crates/cli/args/: Cargo.toml
crates/cli/src/: args.rs  chain_config.rs  file.rs  full.rs  lib.rs  optimistic.rs  options.rs  sequencer.rs  shard.rs  sidecar.rs  utils.rs
crates/cli/tests/: config_file.rs
crates/controller/: Cargo.toml
crates/controller/classes/: avnu_Forwarder.contract_class.json
crates/controller/src/: lib.rs  vrf.rs
crates/explorer/: Cargo.toml  README.md  build.rs
crates/explorer/src/: lib.rs
crates/feeder-gateway/: Cargo.toml
crates/feeder-gateway/src/: client.rs  handlers.rs  lib.rs  server.rs
crates/feeder-gateway/tests/: mainnet.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/gateway-client/: Cargo.toml
crates/gateway/gateway-server/: Cargo.toml
crates/gateway/gateway-types/: Cargo.toml
crates/gateway/src/: client.rs  lib.rs
crates/gateway/tests/: mainnet.rs  types.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: allocation.rs  constant.rs  json.rs  lib.rs  mod.rs  test-genesis-with-class.json  test-genesis-with-duplicate-name.json  test-genesis.json
crates/grpc/: Cargo.toml  build.rs
crates/grpc/benches/: payload.rs
crates/grpc/examples/: client.rs
crates/grpc/proto/: common.proto  starknet.proto  types.proto
crates/grpc/src/: client.rs  config.rs  error.rs  impls.rs  lib.rs  server.rs
crates/grpc/tests/: serialization_test.rs  starknet.rs
crates/log/: Cargo.toml
crates/log/src/: gcloud.rs  lib.rs  otel.rs
crates/messaging/: Cargo.toml
crates/messaging/examples/: starknet_core_usage.rs
crates/messaging/src/: collector.rs  controller.rs  ethereum.rs  lib.rs  server.rs  service.rs  starknet.rs  starknet_core.rs  stream.rs  testing.rs  trigger.rs
crates/messaging/tests/: checkpoint.rs  e2e.rs  eth_settlement.rs  starknet_settlement.rs
crates/node/: Cargo.toml
crates/node/config/: Cargo.toml  build.rs
crates/node/full/: Cargo.toml
crates/node/full-node/: Cargo.toml
crates/node/node/: Cargo.toml
crates/node/node-cli/: Cargo.toml
crates/node/node-cli-args/: Cargo.toml
crates/node/node-defaults/: Cargo.toml
crates/node/sequencer/: Cargo.toml
crates/node/sharding/: Cargo.toml
crates/node/src/: exit.rs  lib.rs  sidecar.rs
crates/optimistic/: Cargo.toml
crates/optimistic/src/: execution.rs  executor.rs  lib.rs  pool.rs  storage.rs
crates/paymaster/: Cargo.toml
crates/paymaster/src/: lib.rs
crates/paymaster/tests/: sidecar.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: config.rs  error.rs  lib.rs  metrics.rs  piltover.rs  prover.rs  service.rs  status.rs
crates/sharding/: Cargo.toml
crates/sharding/src/: lib.rs  manager.rs  pool.rs  runtime.rs  scheduler.rs  shard.rs  types.rs  worker.rs
crates/sharding/tests/: runtime_rpc_flow.rs
crates/starknet/: Cargo.toml
crates/starknet/src/: http.rs  lib.rs  rpc.rs
crates/tee/: Cargo.toml  README.md
crates/tee/client/: .gitignore  Cargo.toml  Scarb.toml  THIRD_PARTY_NOTICES.md
crates/tee/contracts/: Makefile  README.md  Scarb.toml  amd_root_certs.json  fetch-root-certs.sh  snfoundry.toml
crates/tee/src/: attestation.rs  error.rs  lib.rs  mock.rs  provider.rs  snp.rs  tdx.rs
crates/tee_deploy/: Cargo.toml
crates/tee_deploy/src/: main.rs  state.rs
crates/test-utils/: Cargo.toml
crates/trie/: Cargo.toml
crates/trie/src/: classes.rs  contracts.rs  lib.rs  mem_storage.rs  node.rs  proof.rs  storage.rs  storages.rs  tree.rs
crates/utils/: Cargo.toml
crates/utils/examples/: mock_provider.rs
crates/utils/macro/: README.md
crates/utils/src/: lib.rs  node.rs  signal.rs  tx_waiter.rs
dagger/: go.mod  (+1 more)
tests/cartridge/: Cargo.toml
tests/cartridge/src/: main.rs
tests/controller/: Cargo.toml
tests/controller/src/: main.rs
tests/db-compat/: Cargo.toml
tests/db-compat/src/: main.rs
tests/load-test/: Cargo.toml  README.md
tests/load-test/examples/: basic_usage.md
tests/load-test/src/: client.rs  main.rs  scenarios.rs  transactions.rs  utils.rs
tests/reverse-proxy/: Cargo.toml
tests/reverse-proxy/src/: main.rs
(+1185 files in other folders)
