[workspace]
resolver = "2"
members = [
    "clients/amd_tee_registry_client",
    "clients/katana_tee_client",
    "crates/tee_deploy",
]

# Exclude submodule workspaces - they manage their own builds
exclude = [
    "crates/katana",
    "crates/amd-sev-snp-attestation-sdk",
    "crates/starknet-rust",
    "crates/garaga",  # Only using tools/garaga_rs from here
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

# =============================================================================
# Workspace dependencies
# =============================================================================
[workspace.dependencies]
# Our own crates
amd_tee_registry_client = { path = "clients/amd_tee_registry_client" }
katana_tee_client = { path = "clients/katana_tee_client" }

# AMD SEV-SNP SDK crates (from submodule)
amd-sev-snp-attestation-prover = { path = "crates/amd-sev-snp-attestation-sdk/crates/prover", default-features = false, features = ["sp1"] }
amd-sev-snp-attestation-verifier = { path = "crates/amd-sev-snp-attestation-sdk/crates/verifier", default-features = false }
sp1-methods = { path = "crates/amd-sev-snp-attestation-sdk/crates/sp1-methods" }
x509-verifier-rust-crypto = { path = "crates/amd-sev-snp-attestation-sdk/crates/x509-verifier-rust-crypto" }

# -----------------------------------------------------------------------------
# Common dependencies
# -----------------------------------------------------------------------------
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
anyhow = "1"

# SP1 SDK dependencies (matching AMD SDK versions exactly)
sp1-sdk = { version = "5.2.1", default-features = false, features = ["network"] }
alloy-primitives = { version = "=1.3.1", default-features = false }
alloy-sol-types = { version = "=1.3.1", features = ["json"] }
bincode = "1.3.3"
lazy_static = "1.5.0"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI support
clap = { version = "4", features = ["derive"] }

# Fix alloy-consensus 1.0.41 derive macro bug - use git source for all alloy crates
[patch.crates-io]
alloy = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", tag = "v1.0.41" }

