[package]
name = "amd_tee_registry_client"
version.workspace = true
edition.workspace = true
description = "AMD TEE attestation prover - generate SP1 Groth16 proofs from AMD SEV-SNP attestation reports"

[dependencies]
# AMD SEV-SNP SDK for attestation proving
amd-sev-snp-attestation-prover = { workspace = true }

# Alloy types (for Bytes)
alloy-primitives = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
