[package]
name = "katana_tee_client"
version.workspace = true
edition.workspace = true
description = "Katana TEE client - fetch attestations from Katana RPC and generate proofs"

[dependencies]
# AMD TEE registry client for attestation proving
amd_tee_registry_client = { workspace = true }

# Re-export types from AMD SDK for proof handling
amd-sev-snp-attestation-prover = { workspace = true }

# Starknet (local submodule)
starknet-rust-core = { path = "../../crates/starknet-rust/starknet-rust-core" }
starknet-rust-providers = { path = "../../crates/starknet-rust/starknet-rust-providers" }
starknet-rust-accounts = { path = "../../crates/starknet-rust/starknet-rust-accounts" }
starknet-rust-signers = { path = "../../crates/starknet-rust/starknet-rust-signers" }
url = "2"

# HTTP client for Katana RPC
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { workspace = true }

[dev-dependencies]

[[example]]
name = "generate_proof"
path = "examples/generate_proof.rs"

[[example]]
name = "fetch_attestation"
path = "examples/fetch_attestation.rs"

[[example]]
name = "execute_proof"
path = "examples/execute_proof.rs"

[[bin]]
name = "katana-tee"
path = "src/bin/cli.rs"
