[package]
edition.workspace = true
license.workspace = true
name = "cartridge"
repository.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
katana-contracts.workspace = true
katana-primitives.workspace = true

anyhow.workspace = true
ark-ec = "0.4"
lazy_static.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
# Use a specific revision of stark-vrf to avoid unwanted breaking changes.
stark-vrf = { git = "https://github.com/dojoengine/stark-vrf.git", rev = "96d6d2a" }
