[package]
edition.workspace = true
license.workspace = true
name = "cartridge"
repository.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
katana-contracts.workspace = true
katana-genesis.workspace = true
katana-pool = { workspace = true }
katana-pool-api = { workspace = true }
katana-primitives.workspace = true
katana-provider = { workspace = true }
katana-rpc-types = { workspace = true  }
katana-paymaster = { workspace = true  }

anyhow.workspace = true
ark-ff = "0.4.2"
cainome-cairo-serde.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
lazy_static.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stark-vrf.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
