[package]
edition.workspace = true
license.workspace = true
name = "katana-chain-spec"
repository.workspace = true
version.workspace = true

[dependencies]
katana-contracts.workspace = true
katana-genesis.workspace = true
katana-primitives.workspace = true

alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
piltover.workspace = true
serde.workspace = true
starknet.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
katana-executor.workspace = true
katana-provider = { workspace = true, features = [ "test-utils" ] }
rstest.workspace = true
similar-asserts.workspace = true
