[package]
edition.workspace = true
license.workspace = true
name = "katana-cli"
repository.workspace = true
version.workspace = true

[dependencies]
katana-chain-spec.workspace = true
katana-core.workspace = true
katana-executor.workspace = true
katana-messaging.workspace = true
katana-node.workspace = true
katana-genesis.workspace = true
katana-pool.workspace = true
katana-pool-api.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-server.workspace = true
katana-rpc-types.workspace = true
katana-slot-controller = { workspace = true, optional = true }
katana-tee = { workspace = true, optional = true }
katana-tracing.workspace = true
katana-utils.workspace = true
serde-utils.workspace = true

alloy-primitives.workspace = true
anyhow.workspace = true
ark-ff = { version = "0.4.2", optional = true }
clap.workspace = true
console.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.1.0"
stark-vrf = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
katana-gas-price-oracle.workspace = true
starknet.workspace = true

[features]
paymaster = [
	"dep:katana-slot-controller",
	"dep:reqwest",
	"dep:starknet",
	"katana-node/paymaster",
	"katana-rpc-server/paymaster",
]
vrf = [
	"paymaster",
	"dep:ark-ff",
	"dep:stark-vrf",
	"katana-node/vrf",
	"katana-rpc-server/vrf",
]
cartridge = [
	"katana-node/cartridge",
	"katana-rpc-server/cartridge",
	"paymaster",
	"vrf",
]
grpc = [ "katana-node/grpc" ]
default = ["cartridge", "server", "tee", "grpc"]
explorer = ["katana-node/explorer", "katana-utils/explorer"]
native = ["katana-node/native"]
server = []
tee = ["dep:katana-tee", "katana-node/tee", "katana-node/tee-snp", "katana-tee/snp"]
